whitelisting, cleaning and license

--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,8 @@
     "node": ">=16.14.2"
   },
   "scripts": {
-    "build": "tsc",
+    "prepare-env": "node --loader ts-node/esm ./prepare-env.ts",
+    "build": "npm run prepare-env && tsc",
     "watch": "tsc -w",
     "prestart": "npm run build",
     "start": "func start",
