--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@azure/static-web-apps-cli": "^1.0.2",
+    "@azure/static-web-apps-cli": "1.0.2",
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
@@ -27,11 +27,11 @@
     "autoprefixer": "^10.4.13",
     "gulp": "^4.0.2",
     "gulp-append-prepend": "^1.0.9",
-    "npm-check-updates": "^16.3.20",
+    "npm-check-updates": "^16.3.22",
     "postcss": "^8.4.19",
     "postcss-purgefonts": "^1.0.2",
     "sass": "^1.56.1",
-    "tailwindcss": "^3.2.3",
+    "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "vite": "^3.2.3"
