--- a/.github/workflows/npm-publish-pages.yml
+++ b/.github/workflows/npm-publish-pages.yml
@@ -16,8 +16,7 @@ jobs:
         with:
           node-version: 16
       - run: npm ci
-      - run: npm run prepare-pages
-      - run: npm run build
+      - run: npm run build-pages
       - run: npm test
 
   publish-npm:
