--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "scripts": {
     "prepare-azure":"rm -rf build && mkdir -p build && cat src/index.ts src/azure.ts | sed -e 's/\\.\\.\\/package\\.json/\\.\\/package\\.json/g' >> build/index.ts  && cp -a src/Azure build/ && cp tsconfig.json build/ && cat package.json | sed -e 's/@sctg\\/nocors/@sctg\\/nocors-azure/g' > build/package.json",
     "prepare-pages":"rm -rf build && mkdir -p build && cat src/index.ts src/pages.ts | sed -e 's/\\.\\.\\/package\\.json/\\.\\/package\\.json/g' >> build/index.ts  && cp -a src/Pages build/ && cp tsconfig.json build/ && cat package.json | sed -e 's/@sctg\\/nocors/@sctg\\/nocors-pages/g' > build/package.json",
+    "build-azure":"npm run prepare-azure && npm run build",
+    "build-pages":"npm run prepare-pages && npm run build",
     "build": "rm -rf dist && cd build && npm run _build",
     "_build": "tsc && mv dist .. || exit 0",
     "prepublish": "npm run build",
