--- a/.github/workflows/npm-publish-azure.yml
+++ b/.github/workflows/npm-publish-azure.yml
@@ -30,6 +30,7 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: npm ci
       - run: npm run build-azure
+      - run: cp build/package.json .
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPMJS_TOKEN}}
