--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "outDir":"dist",
     "strict": true,
     "forceConsistentCasingInFileNames":true,
-    "types": ["@cloudflare/workers-types"]
+    "types": ["@cloudflare/workers-types","mocha","node"]
   },
   "exclude": ["node_modules/**/*","dist/**/*"]
 }
