--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sctg/nocors",
-  "version": "0.9.15",
+  "version": "0.9.16",
   "description": "Minimalist noCors proxy for servless app",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -15,7 +15,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+hhttps://github.com/highcanfly-club/nocors"
+    "url": "git+https://github.com/highcanfly-club/nocors"
   },
   "engines": {
     "node": ">=16"
@@ -32,15 +32,15 @@
   },
   "devDependencies": {
     "@azure/functions": "^3.2.0",
-    "@cloudflare/workers-types": "^3.18.0",
+    "@cloudflare/workers-types": "^4.20221111.1",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.0",
     "@types/node": "^18.11.9",
     "chai": "^4.3.7",
-    "got": "^12.5.2",
+    "got": "^12.5.3",
     "mocha": "^10.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
   },
   "bugs": {
     "url": "https://github.com/highcanfly-club/nocors/issues"
